[package]
name = "rust-md5"
version = "0.2.14"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/exe-dealer/rust-md5/"
repository = "https://github.com/exe-dealer/rust-md5/"
description = "A pure-Rust implementation of MD5 algorithm."
keywords = [ "Crypto", "MD5" ]
readme = "README.md"

[lib]
name = "md5"

[profile.test]
opt-level = 2
